packages/server/prod/cortex-ingestion/05_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cortex-ingestion-ingress
  namespace: cortex-ingestion
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-body-size: '500m'
    nginx.ingress.kubernetes.io/proxy-http-version: '1.1'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '128k'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
spec:
  ingressClassName: nginx
  rules:
    - host: ingestion.usecortex.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cortex-ingestion
                port:
                  number: 80
